# event-management-platform-API-

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  run.py
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  main.py
app/core/: config.py
tests/: __init__.py  test_main.py
